cloud/kubernetes/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-$SEAT-deployment
spec:
  selector:
    matchLabels:
      app: ui-$SEAT
  replicas: 1
  template:
    metadata:
      labels:
        app: ui-$SEAT
    spec:
      containers:
        - name: ui
          image: $IMAGE_REPO:$IMAGE_TAG
          ports:
            - containerPort: 80
