cloud/kubernetes/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-$SEAT
spec:
  selector:
    app: ui-$SEAT
  ports:
    - protocol: TCP
      port: 80
