cloud/kubernetes/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-$SEAT-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "ui-$SEAT.optiprism"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-$SEAT
            port:
              number: 80
